Fix footer-above layout issue

--- a/03-Basic-Front-End-Development-Projects/build-a-personal-portfolio-webpage/css/style.css
+++ b/03-Basic-Front-End-Development-Projects/build-a-personal-portfolio-webpage/css/style.css
@@ -13,9 +13,9 @@ h2,h3{
   text-transform:uppercase;
 }
 a{
-  color:#722872;
+  color:rgb(134, 26, 26);
 }
-a:hover,a:focus{color:#592059;
+a:hover,a:focus{color:rgb(182, 24, 24);
 }
 #banner .container, 
 main header, 
@@ -55,7 +55,7 @@ nav{
 @media(max-width:768px){
   nav{padding:5px;text-align:center;margin:0 auto;width:120%;
   }
-  nav .active a{color:#722872;background:#bbb;box-shadow:0px 2px 2px 1px rgba(0, 0, 0, 0.1);
+  nav .active a{color:rgb(134, 26, 26);background:#bbb;box-shadow:0px 2px 2px 1px rgba(0, 0, 0, 0.1);
   }
 }
 .nav>li{height:100%;text-transform:uppercase;font-weight:bold;letter-spacing:2px;display:-webkit-inline-box;display:-ms-inline-flexbox;display:inline-flex;
@@ -133,7 +133,7 @@ form .row:first-child .form-item{border-top:1px solid #fff;
 }
 .form-item-filled label{top:0;opacity:1;color:#aaa;
 }
-.form-item-focused label{color:#722872;
+.form-item-focused label{color:rgb(134, 26, 26);
 }
 footer{
   color:#fff;
@@ -166,7 +166,7 @@ footer h3{margin-bottom:30px;color:#fff;
   -webkit-transition:all .3s ease-in-out;
   transition:all .3s ease-in-out;
 }
-.button:hover{border:solid 2px #fff;color:#722872;background:#fff;
+.button:hover{border:solid 2px #fff;color:rgb(134, 26, 26);background:#fff;
 }
 .scroll-top{
   z-index:1049;
@@ -174,9 +174,9 @@ footer h3{margin-bottom:30px;color:#fff;
   visibility:visible;
   bottom:2%;right:2%;
 }
-.scroll-top a{background:#722872;
+.scroll-top a{background:rgb(134, 26, 26);
 }
-.scroll-top a:hover, .scroll-top a:focus{color:#722872;background-color:#bbb;border-color:#722872;
+.scroll-top a:hover, .scroll-top a:focus{color:rgb(134, 26, 26);background-color:#bbb;border-color:rgb(134, 26, 26);
 }
 @media(min-width:768px){
   .scroll-top a{visibility:hidden;
